<resources>
    <string name="app_name">MyLocation</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="speed">Speed: </string>
    <string name="bearing">Bearing: </string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="timer">Timer: </string>
    <string name="marker">Tracking Interval.</string>
    <string name="waiting">Waiting</string>
    <string name="tracking">Tracking position</string>
    <string name="stopping">Tracking stopped</string>

    <string name="database">Database Log</string>
    <string name="deleteDB">Delete DB</string>
    <string name="save">Save</string>
    <string name="databaseHeader">Database Entries</string>


    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Test</string>

    <string name="saveTrackTitle">Save your latest Track</string>
    <string name="title_activity_setup">SetupActivity</string>

    <string name="track_stop">Tracking Stopped!</string>

    <string name="delete_dialogue">Delete track: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
