<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"></LinearLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button_marker"
        android:text="@string/start" />
    <!--
    <Button
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button_stop"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       />
-->
    <Button
        android:id="@+id/button_marker"
        android:layout_width="120sp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:text="@string/marker" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button_marker"
        android:layout_alignRight="@+id/button_marker"
        android:layout_below="@+id/button_start"
        android:background="#080707">

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:text="Waiting"
            android:textColor="#fefdfd"
            android:textSize="30sp" />
    </FrameLayout>

    <LinearLayout


        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="90dp"

        android:orientation="vertical"
        android:weightSum="1"
        tools:context="mobilecomputing.hsalbsig.de.mylocation.MainActivity">

        <TextView
            android:id="@+id/textView_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_longitude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_accuracy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accuracy"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_speed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_bearing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/bearing"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/timer"
            android:textAppearance="?android:attr/textAppearanceLarge" />


    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="20dp" />

</RelativeLayout>




